# libsatk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/common/: Common.hpp  Config.hpp  Map_Vector.hpp
include/ecs/: Component_Manager.hpp  Component_Traits.hpp  Ecs.hpp
src/common/: Common.hpp  Config.hpp
src/ecs/: Component_Manager.cpp  Component_Manager.hpp  Ecs.cpp
tests/ecs/: CMakeLists.txt  Ecs.test.cpp
tools/: libsatkrc.sh
